force-app/main/default/objects/Travel_Approval__c/fields/Approver_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Level 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Travel_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>