force-app/main/default/objects/Travel_Approval__c/fields/Customer_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Approvals</relationshipLabel>
    <relationshipName>Travel_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>