force-app/main/default/objects/Travel_Approval__c/fields/Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>Description_Formula__c</fullName>
    <formula>Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>