force-app/main/default/objects/Travel_Approval__c/fields/Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Date__c</fullName>
    <label>Travel Date</label>
    <type>Date</type>
</CustomField>