force-app/main/default/objects/Travel_Approval__c/fields/Travel_Destination__c.field-meta.xml
<CustomField>
    <fullName>Travel_Destination__c</fullName>
    <label>Travel Destination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>