force-app/main/default/objects/Travel_Approval__c/fields/Travel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Travel_Reason__c</fullName>
    <label>Travel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
            <value>
                <fullName>Partner Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>