force-app/main/default/objects/Travel_Approval__c/validationRules/Travel_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Travel_Date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>Travel_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Travel_Date__c</errorDisplayField>
    <errorMessage>Travel Date cannot be in the past</errorMessage>
</ValidationRule>